--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ subjects:
 - !lcsh 'Wales -- Fiction'
 - !lcsh 'Women -- Fiction'
 - !lcsh 'Triangles (Interpersonal relations) -- Fiction'
+- GITenberg
 title: Gone to Earth
 url: http://www.gutenberg.org/ebooks/7055
